--- a/c201907-mhb-game/index.html
+++ b/c201907-mhb-game/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:type"          content="website" />
 	<meta property="og:title"         content="Pizza Hut 必勝客 x 魔力寶貝M 網購MY HOY BOX 就送限定虛寶" />
 	<meta property="og:description"   content="2019/7/2(星期二) ~ 2019/7/31(星期三) 活動期間於【必勝客官方網站】購買MY HOT BOX個人餐，即可獲得 【魔力寶貝M限定虛寶-MY HOT BOX魔力萌寵餐】" />
-	<meta property="og:image"         content="images/main_banner.png" />
+	<meta property="og:image"         content="https://info.pizzahut.com.tw/campaign/c201907-mhb-game/images/main_banner.png" />
 
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
@@ -48,7 +48,7 @@
 	  }(document, 'script', 'facebook-jssdk'));</script>
 	<main>
 		<section class="kv_main">
-			<img src="images/main_banner.png" alt="Pizza Hut 必勝客 x 魔力寶貝M 網購MY HOY BOX 就送限定虛寶" width="100%">
+			<a href="https://www.pizzahut.com.tw/promotions/?parent_id=2276&fm=bt" target="_blank"><img src="images/main_banner.png" alt="Pizza Hut 必勝客 x 魔力寶貝M 網購MY HOY BOX 就送限定虛寶" width="100%"></a>
 		</section>
 		<section class="top_menu">
 			<div class="content_box">
@@ -63,27 +63,26 @@
 			<div class="content_box bg_paper_01">
 				<h3 class="img_title title_01" id="move_goto_01">活動時間及辦法</h3>
 				<h4>2019/7/2(星期二) ~ 2019/7/31(星期三)</h4>
-				<p class="p_info"><span class="nb">1.</span><br>
-					活動期間於<span class="f_red">【必勝客官方網站】</span><br>
+				<p class="p_info"><span class="nb">1.</span>活動期間於<span class="f_red">【必勝客官方網站】</span><br>
 					購買MY HOT BOX個人餐，即可獲得<br>
 					<span class="f_red">【魔力寶貝M限定虛寶-MY HOT BOX魔力萌寵餐】</span><br>
+					<span class="f_s">(虛寶贈品數量有限，送完為止)</span><br>
 					<br>
-					<span class="nb">2.</span><br>
-					<b>虛寶取得方式：</b><br>
+					<span class="nb">2.</span><b>虛寶取得方式：</b><br>
 					<span class="f_red">購買一組個人餐即可獲得一組虛寶序號</span><br>
 					<span class="f_s">(即：買2組獲得2組序號…以此類推)，</span><br>
 					取餐時，提供虛寶序號於發票明細中<br>
 					<br>
-					<span class="nb">3.</span><br>
-					<b>虛寶兌換方式：</b><br>
+					<span class="nb">3.</span><b>虛寶兌換方式：</b><br>
 					<span class="f_red">2019年7月2日至2019年8月31日23:59，</span><br>
 					至魔力寶貝M遊戲中登錄兌換，<br>
 					逾時虛號將自動失效
 				</p>
 				<div class="btn_link">
 					<p class="btn">
-						<a class="btn_img_01" target="_blank" href="#">立即網購拿虛寶</a>
-						<a class="btn_img_02 fb-share-button" data-href="https://info.pizzahut.com.tw/campaign/c201907-mhb-game/" data-layout="button_count" target="_blank">分享至FB</a>
+						<a class="btn_img_01" target="_blank" href="https://www.pizzahut.com.tw/promotions/?parent_id=2276&fm=bt">立即網購拿虛寶</a>
+						<!-- <a class="btn_img_02 fb-share-button" data-href="https://info.pizzahut.com.tw/campaign/c201907-mhb-game/" data-layout="button_count" target="_blank">分享至FB</a> -->
+						<a class="btn_img_02 fb-share-button" href="http://www.facebook.com/sharer.php?u=https://info.pizzahut.com.tw/campaign/c201907-mhb-game/" target="_blank">分享至FB</a>
 					</p>
 				</div>
 			</div>
@@ -111,44 +110,41 @@
 		<section class="eventinfo_box bg_01">
 			<div class="content_box bg_paper_02">
 				<h3 class="img_title title_03" id="move_goto_03">虛寶兌換流程</h3>
-				<h4>兌換網址<br>
-					<a href="https://tw.beanfun.com/CrossGateM/index.aspx" target="_blank">https://tw.beanfun.com/CrossGateM/index.aspx</a>
-				</h4>
 				<div class="btn_link">
 					<p class="btn">
-						<a class="btn_img_03" target="_blank" href="#">下載 魔力寶貝M</a>
+						<a class="btn_img_03" target="_blank" href="https://event.beanfun.com/CrossGateM/SN/index.aspx">立即兌換</a>
 					</p>
 				</div>
+				<h4>遊戲下載<br>
+					<a href="https://tw.beanfun.com/CrossGateM/index.aspx?%243p=a_custom_359971&_branch_match_id=646267254080102968" target="_blank">https://tw.beanfun.com/CrossGateM/index.aspx?%243p=a_custom_359971&_branch_match_id=646267254080102968</a>
+				</h4>
 				<p class="p_info">
-					<span class="nb">Step 1.</span><br>
-					選擇帳號登入方式
+					<span class="nb">Step 1.</span><br>選擇帳號登入方式
 				</p>
 				<div class="img"><img src="images/step_img_01.png" alt="Step 1.選擇帳號登入方式" width="100%" style="max-width: 574px;"></div>
 				<p class="p_info">
-					<span class="nb">Step 2.</span><br>
-					進入兌換頁面
+					<span class="nb">Step 2.</span><br>進入兌換頁面
 				</p>
 				<div class="img"><img src="images/step_img_02.png" alt="Step 2.進入兌換頁面" width="100%" style="max-width: 574px;"></div>
 				<p class="p_info">
-					<span class="nb">Step 3.</span><br>
-					兌換完成，可到遊戲中郵件箱領取獎勵
+					<span class="nb">Step 3.</span><br>兌換完成，可到遊戲中郵件箱領取獎勵
 				</p>
 				<div class="img"><img src="images/step_img_03.png" alt="Step 3.兌換完成，可到遊戲中郵件箱領取獎勵" width="100%" style="max-width: 574px;"></div>
 				<p class="p_info">
-					<span class="nb">Step 4.</span><br>
-					進入到遊戲內選擇“社交”
+					<span class="nb">Step 4.</span><br>進入到遊戲內選擇“社交”
 				</p>
 				<div class="img"><img src="images/step_img_04.png" alt="Step 4.進入到遊戲內選擇“社交”" width="100%" style="max-width: 785px;"></div>
 				<p class="p_info">
-					<span class="nb">Step 5.</span><br>
-					選擇“郵件”即可領取<b>MY HOT BOX萌寵餐虛寶</b>獎勵
+					<span class="nb">Step 5.</span><br>選擇“郵件”即可領取<b>MY HOT BOX萌寵餐虛寶</b>獎勵
 				</p>
-				<div class="img"><img src="images/step_img_05.png" alt="Step 5.選擇“郵件”即可領取MY HOT BOX萌寵餐虛寶獎勵" width="100%" style="max-width: 785px;"></div>
+				<div class="img"><img src="images/step_img_05.png" alt="Step 5.選擇“郵件”即可領取MY HOT BOX萌寵餐虛寶獎勵" width="100%" style="max-width: 785px;">
+				</div>
 				<p class="p_info">
-					<span class="nb">Step 6.</span><br>
-					領取後出現在“背包”，補給品內的欄位
+					<span class="nb">Step 6.</span><br>領取後出現在“背包”，補給品內的欄位
 				</p>
-				<div class="img"><img src="images/step_img_06.png" alt="Step 6.領取後出現在“背包”，補給品內的欄位" width="100%" style="max-width: 785px;"></div>
+				<div class="img">
+					<img src="images/step_img_06.png" alt="Step 6.領取後出現在“背包”，補給品內的欄位" width="100%" style="max-width: 785px;">
+				</div>
 
 			</div>
 		</section>
@@ -163,7 +159,7 @@
 						<p>此活動之虛寶序號將連同發票明細一同提供，訂購時消費者請務必向門市索取發票與發票明細，並當面點交，提供後門市與外送人員概不負責。</p>
 					</li>
 					<li>
-						<p>活動設有兌換資格限制，需擁有<b><a target="_blank" href="https://tw.beanfun.com/CrossGateM/index.aspx">【魔力寶貝M】</a></b>遊戲方可使用活動序號兌換獲取虛寶。若未擁有<b>【魔力寶貝M】</b>遊戲，請先完成<a target="_blank" href="https://tw.beanfun.com/CrossGateM/index.aspx">遊戲下載</a>。</p>
+						<p>活動設有兌換資格限制，需擁有<b><a target="_blank" href="https://tw.beanfun.com/CrossGateM/index.aspx?%243p=a_custom_359971&_branch_match_id=646267254080102968">【魔力寶貝M】</a></b>遊戲方可使用活動序號兌換獲取虛寶。若未擁有<b>【魔力寶貝M】</b>遊戲，請先完成<a target="_blank" href="https://tw.beanfun.com/CrossGateM/index.aspx?%243p=a_custom_359971&_branch_match_id=646267254080102968">遊戲下載</a>。</p>
 					</li>
 					<li>
 						<p>序號使用期間：即日起至2019年8月31日23:59止，請於期限內完成登錄，逾期無效。</p>
@@ -184,10 +180,10 @@
 						<p>主辦單位保有隨時修改活動辦法、活動時間、優惠內容及終止活動之權利。</p>
 					</li>
 					<li>
-						<p>必勝客客服專線：0800-231-927</p>
+						<p>必勝客客服專線：<a target="_blank" href="https://www.pizzahut.com.tw/contact_us/?fm=bt">https://www.pizzahut.com.tw/contact_us/?fm=bt</a></p>
 					</li>
 					<li>
-						<p>魔力寶貝M客服專線：待6/17提供</p>
+						<p>魔力寶貝M客服專線：<a target="_blank" href="https://service.antspw.com/MSGBoardUI/MobileForm/Index/CGM">https://service.antspw.com/MSGBoardUI/MobileForm/Index/CGM</a></p>
 					</li>
 				</ul>
 			</div>
