Updata css + html

--- a/c201907-mhb-game/index.html
+++ b/c201907-mhb-game/index.html
@@ -74,9 +74,9 @@
 					取餐時，提供虛寶序號於發票明細中<br>
 					<br>
 					<span class="nb">3.</span><b>虛寶兌換方式：</b><br>
-					<span class="f_red">2019年7月2日至2019年8月31日23:59，</span><br>
-					至魔力寶貝M遊戲中登錄兌換，<br>
-					逾時虛號將自動失效
+					<span class="f_red">2019年7月2日至2019年8月31日23:59，</span>
+					<span class="the_br">至魔力寶貝M遊戲中登錄兌換，</span>
+					<span class="the_br">逾時虛號將自動失效</span>
 				</p>
 				<div class="btn_link">
 					<p class="btn">
