Updata css + html

--- a/c201907-mhb-game/index.html
+++ b/c201907-mhb-game/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:type"          content="website" />
 	<meta property="og:title"         content="Pizza Hut 必勝客 x 魔力寶貝M 網購MY HOY BOX 就送限定虛寶" />
 	<meta property="og:description"   content="2019/7/2(星期二) ~ 2019/7/31(星期三) 活動期間於【必勝客官方網站】購買MY HOT BOX個人餐，即可獲得 【魔力寶貝M限定虛寶-MY HOT BOX魔力萌寵餐】" />
-	<meta property="og:image"         content="https://info.pizzahut.com.tw/campaign/c201907-mhb-game/images/main_banner.png" />
+	<meta property="og:image"         content="https://info.pizzahut.com.tw/campaign/c201907-mhb-game/images/share_pic.png" />
 
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
@@ -115,8 +115,8 @@
 						<a class="btn_img_03" target="_blank" href="https://event.beanfun.com/CrossGateM/SN/index.aspx">立即兌換</a>
 					</p>
 				</div>
-				<h4>遊戲下載<br>
-					<a href="https://tw.beanfun.com/CrossGateM/index.aspx?%243p=a_custom_359971&_branch_match_id=646267254080102968" target="_blank">https://tw.beanfun.com/CrossGateM/index.aspx?%243p=a_custom_359971&_branch_match_id=646267254080102968</a>
+				<h4>
+					<a href="https://tw.beanfun.com/CrossGateM/index.aspx?%243p=a_custom_359971&_branch_match_id=646267254080102968" target="_blank">遊戲下載</a>
 				</h4>
 				<p class="p_info">
 					<span class="nb">Step 1.</span><br>選擇帳號登入方式
