--- a/veggtable0708/index.html
+++ b/veggtable0708/index.html
@@ -78,6 +78,7 @@
 	            return false;
 		  	}
 		    else{
+		    	$('#top').click(function(){ $('html,body').animate({scrollTop: 0 }, 800); });
 		      	$('.icon-01').click(function(){ $('html,body').animate({scrollTop:$('#move_goto_01').offset().top - 100}, 800); });
 	            $('.icon-02').click(function(){ $('html,body').animate({scrollTop:$('#move_goto_02').offset().top - 140}, 800); });
 	            $('.icon-03').click(function(){ $('html,body').animate({scrollTop:$('#move_goto_03').offset().top - 100}, 800); });
