--- a/veggtable0708/index.html
+++ b/veggtable0708/index.html
@@ -165,7 +165,7 @@
 						</li>
 						<li>
 							<h4>預訂方式</h4>
-							<p>最晚請於一週前<span class="org">電話(02-2507-6808)</span>或<span class="org">現場預訂</span>，<span class="the-br">預訂時以「桌」為單位，每桌最多8位，<br></span>
+							<p>最晚請於一週前<span class="org">電話(<a href="tel:+886-2-25076808">02-2507-6808</a>)</span>或<span class="org">現場預訂</span>，<span class="the-br">預訂時以「桌」為單位，每桌最多8位，<br></span>
 							須繳訂金1,000元(親至門店或轉帳匯款)，<span class="the-br">餐費5,600元(含服務費)，每晚桌次有限，訂完為止。</span></p>
 						</li>
 						<li>
