--- a/veggtable0708/index.html
+++ b/veggtable0708/index.html
@@ -10,18 +10,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- You can use Open Graph tags to customize link previews.
     Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
-	<meta property="og:url"           content="#" />
+	<meta property="og:url"           content="https://www.veggtable.com/event/1907_home/index.html" />
 	<meta property="og:type"          content="website" />
 	<meta property="og:title"         content="丰禾日麗 - 禾家來呷辦桌菜" />
 	<meta property="og:description"   content="淵遠流長的飲食文化中，「辦桌」是這片土地最富情懷的傳統習俗。 丰禾日麗為了找尋那份美好，用心重現經典, 2019/07/01(一)-08/01(四) 邀您跟我們憶起回味辦桌好滋味。" />
-	<meta property="og:image"         content="images/share_pic.png" />
+	<meta property="og:image"         content="https://www.veggtable.com/event/1907_home/images/share_pic.png" />
 
 	<link rel="shortcut icon" href="https://www.veggtable.com/images/favicon.ico">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
-	<!-- <script type="text/javascript" src="js/index.js"></script> -->
 	<script src="https://mynameismatthieu.com/WOW/dist/wow.min.js"></script>
 	<script type="text/javascript">
     	// animate
@@ -44,18 +43,6 @@
 		  });
 		});
 	</script>
-
-	<!-- move -->
-	<!-- <script type="text/javascript">
-        $(function(){
-            $('.icon-01').click(function(){ $('html,body').animate({scrollTop:$('#move_goto_01').offset().top - 0}, 800); });
-            $('.icon-02').click(function(){ $('html,body').animate({scrollTop:$('#move_goto_02').offset().top - 0}, 800); });
-            $('.icon-03').click(function(){ $('html,body').animate({scrollTop:$('#move_goto_03').offset().top - 0}, 800); });
-            $('.icon-04').click(function(){ $('html,body').animate({scrollTop:$('#move_goto_04').offset().top - 0}, 800); });
-            return false;
-        });
-    </script> -->
-    
 	<script type="text/javascript">
         //scroll top: hide
         $(window).scroll(function () {
