Update html + css

--- a/veggtable0708/index.html
+++ b/veggtable0708/index.html
@@ -93,7 +93,7 @@
 				<ul class="menu clearfix">
 					<li><p class="icon-01"><span class="line">活動<span class="the-br2">緣由</span></span></p></li>
 					<li><p class="icon-02"><span class="line">活動<span class="the-br2">方式</span></span></p></li>
-					<li><p class="icon-03"><span class="line">菜色<span class="the-br2">清單</span></span></p></li>
+					<li><p class="icon-03"><span class="line">現場<span class="the-br2">享用</span></span></p></li>
 					<li><p class="icon-04"><span class="line">菜色<span class="the-br2">故事</span></span></p></li>
 				</ul>
 			</nav>
@@ -141,7 +141,7 @@
 					</div>
 				</div>
 				<div class="info-box">
-					<p class="sub-text">每週四晚上，搶先享用<span class="org">隱藏版辦桌菜</span>，<br>
+					<p class="sub-text">搶先享用<span class="org">隱藏版辦桌菜</span>，<br>
 						現場不僅有總鋪師來說菜講古、<span class="the-br2">餐後還有古早味戳戳樂活動，<br></span>
 						人人有獎，有吃也有拿，<span class="the-br2">為您盛上最豐厚的懷舊滋味。</span>
 					</p>
@@ -152,12 +152,12 @@
 						</li>
 						<li>
 							<h4>預訂方式</h4>
-							<p>最晚請於一週前<span class="org">電話(<a href="tel:+886-2-25076808">02-2507-6808</a>)</span>或<span class="org">現場預訂</span>，<span class="the-br">預訂時以「桌」為單位，每桌最多8位，<br></span>
+							<p><span class="org">電話(<a href="tel:+886-2-25076808">02-2507-6808</a>)</span>或<span class="org">現場預訂</span>，<span class="the-br">每桌最多8位，<br></span>
 							須繳訂金1,000元(親至門店或轉帳匯款)，<span class="the-br">餐費5,600元(含服務費)，每晚桌次有限，訂完為止。</span></p>
 						</li>
 						<li>
 							<h4>開席日期</h4>
-							<p>2019/07/11、07/18、07/25、08/01、08/08<span class="the-br">每週四晚上</span></p>
+							<p>2019/07/11(四)、07/18(四)、07/26(五)、<span class="the-br">08/01(四)、08/08(四)</span></p>
 						</li>
 						<li>
 							<h4>開席時間</h4>
@@ -176,7 +176,7 @@
 			<div class="content-box">
 				<div class="top-title wow fadeInDown" data-wow-duration="2.0s">
 					<div class="line-border">
-						<h3><span>菜</span><span>色</span><span>清</span><span>單</span></h3>
+						<h3><span>現</span><span>場</span><span>享</span><span>用</span></h3>
 					</div>
 				</div>
 				<div class="bannerBox">
@@ -184,12 +184,6 @@
 			            <ul class="slides">
 			                <li>
 			                	<img src="images/banner_01.png" alt="丰禾日麗 菜色圖">
-			                </li>
-			                <li>
-			                	<img src="images/banner_02.png" alt="丰禾日麗 菜色圖">
-			                </li>
-			                <li>
-			                	<img src="images/banner_03.png" alt="丰禾日麗 菜色圖">
 			                </li>
 			            </ul>
 			        </div>
