--- a/iiot/app_web/shop/index.html
+++ b/iiot/app_web/shop/index.html
@@ -30,6 +30,15 @@
 	    });
 	 });
 	</script>
+	<script type="text/javascript">
+     $(function(){
+     	// 
+	  	$(".food_items .top_title").click(function(){
+	  		$(this).next(".option_list_box").slideToggle();
+	    	return false;
+	    });
+	 });
+	</script>
 </head>
 <body>
 	<main class="shop_mainbox">
@@ -74,13 +83,13 @@
 						<li class="clearfix"> <!-- ※幫我寫按了+後會有the_selected (邊框顏色)也就是說 value 數字大於０會有後會有 the_selected -->
 							<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);"></div>
 							<div class="product_info">
-								<h3 class="product_title">產品AAA</h3>
+								<h3 class="product_title">毆姆蛋</h3>
 								<h4 class="sub_info">針對商品描</h4>
 								<p class="money">$129</p>
 								<div class="input_quantity">
 			                        <button><i class="fas fa-minus"></i></button>
 			                        <input type="text" name="" value="" placeholder="0">
-			                        <button><i class="fas fa-plus"></i></button>
+			                        <a href="#food_items" rel="modal:open"><i class="fas fa-plus"></i></a>
 			                    </div>
 							</div>
 						</li>
@@ -190,7 +199,10 @@
 	                    <div class="sbox car_name">
 	                        <div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);"></div>
 		                    <p class="product_name">
-		                        <span class="mainTitle">產品AAAAA</span><span class="style_for">針對商品描述的描述針對商品描述的描述</span><span class="money">NT$105</span>
+		                        <span class="mainTitle">毆姆蛋</span>
+		                        <span class="style_for">針對商品描述的描述針對商品描述的描述</span>
+		                        <span class="other">漢堡 $10（花生口味），加購：薯條 $15、奶茶 $25（特大杯 $10，配料：椰果 $10、珍珠 $10）</span>
+		                        <span class="money">NT$105 + $70</span>
 		                    </p>
 	                    </div>
 	                    <div class="sbox car_nb">
@@ -257,6 +269,184 @@
 		  		</div>
 		  	</form>
 	    </div>
+	    <!-- 請選擇 品項 與 加購-->
+	     <div id="food_items" class="modal fade fadebox food_items">
+	     	<p class="order_title">毆姆蛋</p>
+	    	<form>
+	    		<h3 class="top_title"><span><span class="must">*</span>請選擇外皮<i class="fas fa-caret-down"></i></span></h3>
+	    		<div class="option_list_box">
+		    		<p class="sub_title">外皮啪啦啪啦啪啦</p>
+		    		<ul class="option_list clearfix">
+						<li>
+							<div class="the_radio">
+								<input type="radio" name="aaaa" id="a1" value="吐司">
+								<label for="a1">吐司</label>
+							</div>
+						</li>
+			      		<li>
+							<div class="the_radio">
+								<input type="radio" name="aaaa" id="a2" value="漢堡">
+								<label for="a2">漢堡 $10</label>
+							</div>
+						</li>
+						<li>
+							<div class="the_radio">
+								<input type="radio" name="aaaa" id="a3" value="貝果">
+								<label for="a3">貝果 $15</label>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<h3 class="top_title"><span><span class="must">*</span>請選擇口味<i class="fas fa-caret-down"></i></span></h3>
+				<div class="option_list_box">
+		    		<ul class="option_list clearfix">
+						<li>
+							<div class="the_radio">
+								<input type="radio" name="bb" id="b1" value="草莓">
+								<label for="b1">草莓</label>
+							</div>
+						</li>
+			      		<li>
+							<div class="the_radio">
+								<input type="radio" name="bb" id="b2" value="奶油">
+								<label for="b2">奶油</label>
+							</div>
+						</li>
+						<li>
+							<div class="the_radio">
+								<input type="radio" name="bb" id="b4" value="花生">
+								<label for="b4">花生</label>
+							</div>
+						</li>
+						<li>
+							<div class="the_radio">
+								<input type="radio" name="bb" id="b3" value="巧克力">
+								<label for="b3">巧克力</label>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<h3 class="top_title"><span>加購項目<i class="fas fa-caret-down"></i></span></h3>
+				<div class="option_list_box">
+					<ul class="option_list clearfix">
+						<li>
+							<div>
+								<div class="the_checkbox">
+									<input type="checkbox" name="cc" id="a" value="">
+									<label for="a">薯條 $15</label>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div>
+								<div class="the_checkbox">
+									<input type="checkbox" name="cc" id="b" value="">
+									<label for="b">雞塊 $20</label>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div>
+								<div class="the_checkbox">
+									<input type="checkbox" name="cc" id="c" value="">
+									<label for="c">咖啡 $15</label>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div>
+								<div class="the_checkbox">
+									<input type="checkbox" name="cc" id="d" value="">
+									<label for="d">奶茶 $15</label>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+		    	<div class="the_button">
+		    		<a class="btn c_gray" href="#" rel="modal:close">繼續購物</a>
+		    		<a class="btn c_org" href="#food_items2" rel="modal:open">選好了</a>
+		  		</div>
+		  	</form>
+	    </div>
+	    <!-- 飲料-->
+	    <div id="food_items2" class="modal fade fadebox food_items">
+	    	<form>
+	    		<h3 class="top_title"><span>請選擇飲料大小<i class="fas fa-caret-down"></i></span></h3>
+	    		<div class="option_list_box">
+	    			<p class="sub_title">飲料中文訊息飲料中文訊息</p>
+		    		<ul class="option_list clearfix">
+						<li>
+							<div class="the_radio">
+								<input type="radio" name="aaaa" id="uuu" value="特大杯">
+								<label for="uuu">特大杯 $10</label>
+							</div>
+						</li>
+			      		<li>
+							<div class="the_radio">
+								<input type="radio" name="aaaa" id="iii" value="大杯">
+								<label for="iii">大杯 $8</label>
+							</div>
+						</li>
+						<li>
+							<div class="the_radio">
+								<input type="radio" name="aaaa" id="ooo" value="小杯">
+								<label for="ooo">小杯 $5</label>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<h3 class="top_title"><span>飲料配料<i class="fas fa-caret-down"></i></span></h3>
+				<div class="option_list_box">
+					<ul class="option_list clearfix">
+						<li>
+							<div>
+								<div class="the_checkbox">
+									<input type="checkbox" name="a" id="aaa" value="椰果">
+									<label for="aaa">椰果 $10</label>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div>
+								<div class="the_checkbox">
+									<input type="checkbox" name="b" id="bbb" value="珍珠">
+									<label for="bbb">珍珠 $10</label>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div>
+								<div class="the_checkbox">
+									<input type="checkbox" name="b" id="ccc" value="愛玉">
+									<label for="ccc">愛玉 $10</label>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div>
+								<div class="the_checkbox">
+									<input type="checkbox" name="b" id="ddd" value="芋頭">
+									<label for="ddd">芋頭 $15</label>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div>
+								<div class="the_checkbox">
+									<input type="checkbox" name="b" id="eee" value="蘆薈 $10">
+									<label for="eee">蘆薈 $10</label>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+		    	<div class="the_button">
+		    		<a class="btn c_gray" href="#food_items" rel="modal:open">back</a>
+		    		<a class="btn c_org" href="#food_items2" rel="modal:close">選好了</a>
+		  		</div>
+		  	</form>
+	    </div>
 	</main>
 
 	<!-- Swiper JS -->
@@ -266,6 +456,7 @@
 	<script>
     	var swiper = new Swiper('.swiper-container');
 	</script>
+
 </body>
 </html>
 
