Delete pizza eventpage & update html + css for marketing event page

--- a/Ad_marketing_sponsorship_4/index.html
+++ b/Ad_marketing_sponsorship_4/index.html
@@ -82,7 +82,7 @@
                         <p class="btn">
                             <span class="s_go_01">立即登記．送 3 萬元廣告金</span><br>
                             <span class="f_ss ">贊助計畫<span class="c_yel">限量100名</span>，<span class="the_br">即日起至7/25(四)前登記完為止<br></span>
-                            7/25(四)前完成登記．免刷卡手續費</span>
+                            <span class="line">7/25(四)前完成登記．免刷卡手續費</span></span>
                         </p>
                         
                         <!-- <div id="getting-started" class="countdown-container"></div>
