--- a/Ad_marketing_sponsorship_4/index.html
+++ b/Ad_marketing_sponsorship_4/index.html
@@ -15,12 +15,18 @@
     <meta name="HandheldFriendly" content="true">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="http://hilios.github.io/jQuery.countdown/css/main.css">
     
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="https://use.fontawesome.com/ca17a34927.js"></script>
     <script type="text/javascript" src="js/wow.js"></script>
-    <script src="js/jquery.countdown.min.js"></script>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600,300italic">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+  <link rel="stylesheet" href="http://hilios.github.io/jQuery.countdown/css/main.css">
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
+  <script src="https://cdn.rawgit.com/hilios/jQuery.countdown/2.0.4/dist/jquery.countdown.min.js"></script>
+
     <script type="text/javascript">
         $(function(){
             $('.s_go_01').click(function(){ $('html,body').animate({scrollTop:$('#move_goto_01').offset().top}, 800); });
@@ -32,27 +38,6 @@
         });
     </script>
 
-    <link rel="stylesheet" type="text/css" href="css/jquery.flipcountdown.css" />
-    <script type="text/javascript" src="js/jquery.flipcountdown.js"></script>
-    <script>
-        $(function(){
-            var NY = Math.round((new Date('7/25/2019 00:00:01')).getTime()/1000);
-            $('#retroclockbox1').flipcountdown({
-                tick:function(){
-                    var nol = function(h){
-                        return h>9?h:'0'+h;
-                    }
-                    var range   = NY-Math.round((new Date()).getTime()/1000),
-                        secday = 86400, sechour = 3600,
-                        days    = parseInt(range/secday),
-                        hours   = parseInt((range%secday)/sechour),
-                        min     = parseInt(((range%secday)%sechour)/60),
-                        sec     = ((range%secday)%sechour)%60;
-                    return nol(days)+' '+nol(hours)+' '+nol(min)+' '+nol(sec);
-                }
-            });
-        });
-    </script>
 
 </head>
 <body>
@@ -64,20 +49,86 @@
                         <h1 class="log"><a href="https://www.holkee.com/" target="_blank">holkee</a></h1>
                         <h2 class="title_img"><img src="images/title-img-0704.png" alt="新聞媒體贊助計畫 限時 7/5-7/25" width="100%"></h2>
                         <p class="hightlight">媽，我上新聞了！<span class="the_br">獨家狂殺↘每日只要 $333</span></p>
-                        <div class="time-box"><!-- 時間倒數欄位 -->
-                            <table cellpadding="0" cellspacing="0" border="0" style="margin: 0 auto;">
-                                <tr>
-                                    <td colspan="4" align="center">
-                                        <div id="retroclockbox1" style="display: inline-block;"></div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td style="width:80px;text-align:center;"><p>天</p></td>
-                                    <td style="width:80px;text-align:center;"><p>時</p></td>
-                                    <td style="width:80px;text-align:center;"><p>分</p></td>
-                                    <td style="width:80px;text-align:center;"><p>秒</p></td>
-                                </tr>
-                            </table>
+                        <div class="time-box main-example"><!-- 時間倒數欄位 -->
+                            <div class="main-example">
+                              <div class="countdown-container" id="main-example"></div>
+                            </div>
+                            <script type="text/template" id="main-example-template">
+                              <div class="time <%= label %>">
+                                <span class="count curr top"><%= curr %></span>
+                                <span class="count next top"><%= next %></span>
+                                <span class="count next bottom"><%= next %></span>
+                                <span class="count curr bottom"><%= curr %></span>
+                                <span class="label"><%= label.length < 6 ? label : label.substr(0, 3)  %></span>
+                              </div>
+                            </script>
+                            <script type="text/javascript">
+                              $(window).on('load', function() {
+                                var labels = ['週', '天', '時', '分', '秒'],
+                                  //nextYear = (new Date().getFullYear() + 1) + '/01/01',
+                                  nextYear = '2019/07/25',
+                                  template = _.template($('#main-example-template').html()),
+                                  currDate = '00:00:00:00:00',
+                                  nextDate = '00:00:00:00:00',
+                                  parser = /([0-9]{2})/gi,
+                                  $example = $('#main-example');
+                                // Parse countdown string to an object
+                                function strfobj(str) {
+                                  var parsed = str.match(parser),
+                                    obj = {};
+                                  labels.forEach(function(label, i) {
+                                    obj[label] = parsed[i]
+                                  });
+                                  return obj;
+                                }
+                                // Return the time components that diffs
+                                function diff(obj1, obj2) {
+                                  var diff = [];
+                                  labels.forEach(function(key) {
+                                    if (obj1[key] !== obj2[key]) {
+                                      diff.push(key);
+                                    }
+                                  });
+                                  return diff;
+                                }
+                                // Build the layout
+                                var initData = strfobj(currDate);
+                                labels.forEach(function(label, i) {
+                                  $example.append(template({
+                                    curr: initData[label],
+                                    next: initData[label],
+                                    label: label
+                                  }));
+                                });
+                                // Starts the countdown
+                                $example.countdown(nextYear, function(event) {
+                                  var newDate = event.strftime('%w:%d:%H:%M:%S'),
+                                    data;
+                                  if (newDate !== nextDate) {
+                                    currDate = nextDate;
+                                    nextDate = newDate;
+                                    // Setup the data
+                                    data = {
+                                      'curr': strfobj(currDate),
+                                      'next': strfobj(nextDate)
+                                    };
+                                    // Apply the new values to each node that changed
+                                    diff(data.curr, data.next).forEach(function(label) {
+                                      var selector = '.%s'.replace(/%s/, label),
+                                          $node = $example.find(selector);
+                                      // Update the node
+                                      $node.removeClass('flip');
+                                      $node.find('.curr').text(data.curr[label]);
+                                      $node.find('.next').text(data.next[label]);
+                                      // Wait for a repaint to then flip
+                                      _.delay(function($node) {
+                                        $node.addClass('flip');
+                                      }, 50, $node);
+                                    });
+                                  }
+                                });
+                              });
+                            </script>
                         </div>
                         <p class="btn">
                             <span class="s_go_01">立即登記．送 3 萬元廣告金</span><br>
@@ -85,16 +136,6 @@
                             <span class="line">7/25(四)前完成登記．免刷卡手續費</span></span>
                         </p>
                         
-                        <!-- <div id="getting-started" class="countdown-container"></div>
-                        <script type="text/javascript">
-                          $('#getting-started').countdown('2019/7/25').on('update.countdown', function(event) {
-                              var $this = $(this).html(event.strftime(''
-                                + '<span>%-d</span> day%!d '
-                                + '<span>%H</span> hr '
-                                + '<span>%M</span> min '
-                                + '<span>%S</span> sec'));
-                            });
-                        </script> -->
                     </div>
                 </div>
             </div>
