--- a/Ad_marketing_sponsorship_4/index.html
+++ b/Ad_marketing_sponsorship_4/index.html
@@ -22,7 +22,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600,300italic">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
-  <link rel="stylesheet" href="http://hilios.github.io/jQuery.countdown/css/main.css">
+  <link rel="stylesheet" href="https://hilios.github.io/jQuery.countdown/css/main.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
   <script src="https://cdn.rawgit.com/hilios/jQuery.countdown/2.0.4/dist/jquery.countdown.min.js"></script>
