--- a/iiot/app_web/admin/index.html
+++ b/iiot/app_web/admin/index.html
@@ -126,7 +126,9 @@
 					<ul class="products_list clearfix">
 						<li class="clearfix"> <!-- 點選商品增加 the_selected 邊框顏色--> <!-- 要幫我寫選取到 >< -->
 							<div class="products_content_box">
-								<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);"></div>
+								<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);">
+									<p class="sold"><span>售完</span></p>
+								</div>
 								<!-- <div class="photo" style="background-image: url(<%= product.productImageUrl %>)"></div> -->
 								<div class="product_info">
 									<h3 class="product_title">產品AAA</h3>
