--- a/iiot/app_web/shop- takeapart/index.html
+++ b/iiot/app_web/shop- takeapart/index.html
@@ -82,12 +82,14 @@
 					</div>
 					<ul class="products_list clearfix">
 						<li class="clearfix"> <!-- ※幫我寫按了+後會有the_selected (邊框顏色)也就是說 value 數字大於０會有後會有 the_selected -->
-							<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);"></div>
+							<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);">
+								<p class="sold"><span>售完</span></p>
+							</div>
 							<div class="product_info">
 								<h3 class="product_title">毆姆蛋</h3>
 								<h4 class="sub_info">針對商品描</h4>
 								<p class="money">$129</p>
-								<div class="input_quantity">
+								<div class="input_quantity the_disabled">
 			                        <button><i class="fas fa-minus"></i></button>
 			                        <input type="text" name="" value="" placeholder="0">
 			                        <a href="#food_items" rel="modal:open"><i class="fas fa-plus"></i></a>
@@ -108,12 +110,14 @@
 							</div>
 						</li>
 						<li class="clearfix">
-							<div class="photo" style="background-image: url(https://fpscdn.yam.com/world/201803/6d/27/5aab81bdb6d27.jpg);"></div>
+							<div class="photo" style="background-image: url(https://fpscdn.yam.com/world/201803/6d/27/5aab81bdb6d27.jpg);">
+								<p class="sold"><span>售完</span></p>
+							</div>
 							<div class="product_info">
 								<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱產品名稱產品名稱</h3>
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述...</h4>
 								<p class="money">$129</p>
-								<div class="input_quantity">
+								<div class="input_quantity the_disabled">
 			                        <button><i class="fas fa-minus"></i></button>
 			                        <input type="text" name="" value="" placeholder="0">
 			                        <button><i class="fas fa-plus"></i></button>
