change style for verification

--- a/iiot/app_web/shop- takeapart/shoppingcart_01.html
+++ b/iiot/app_web/shop- takeapart/shoppingcart_01.html
@@ -192,8 +192,9 @@
 	    		<input type="text" name="" placeholder="請輸入手機號碼">
 	    		<div class="both clearfix">
 	    			<button  class="btn" type="button">驗證此手機號碼</button>
-	    			<input type="text" name="" placeholder="驗證碼">
+	    			<input type="text" name="" placeholder="請輸入驗證碼">
 	    		</div>
+	    		<!-- <input type="text" name="" placeholder="請輸入驗證碼"> -->
 	    		<a href="#">沒收到驗證碼?</a>
 	    	</div>
 	    	<div class="the_button">
