--- a/iiot/app_web/shop- takeapart/other.html
+++ b/iiot/app_web/shop- takeapart/other.html
@@ -54,6 +54,21 @@
 								<label for="invoice5">全素</label>
 							</div>
 						</li>
+						<li class="the_invoice">
+							<h4>多選項目</h4>
+							<div>
+								<input id="checkbox1" type="checkbox" name="a" value="option" checked="">
+								<label for="checkbox1">加購袋子 $1</label>
+							</div>
+							<div>
+								<input id="checkbox2" type="checkbox" name="b" value="option">
+								<label for="checkbox2">附梅子粉</label>
+							</div>
+							<div>
+								<input id="checkbox3" type="checkbox" name="c" value="option">
+								<label for="checkbox3">加購紅茶飲料 $10</label>
+							</div>
+						</li>
 					</ul>
 				</div>
 		    </form>
