--- a/iiot/app_web/shop- takeapart/shoppingcart_01.html
+++ b/iiot/app_web/shop- takeapart/shoppingcart_01.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
 	<!-- 強迫修改css -->
     <style type="text/css">
-    	.blocker{ background-color: rgba(0,0,0,0.5);}
+    	.blocker{ background-color: rgba(0,0,0,0.5); z-index: 3;} /*層級改3不然最上面衡的選單會蓋到上面*/
     	.modal{box-shadow: 0 0 10px #0009;}
     </style>
     // <script type="text/javascript">
