--- a/iiot/app_web/shop- takeapart/index.html
+++ b/iiot/app_web/shop- takeapart/index.html
@@ -30,6 +30,9 @@
 	    	return false;
 	    });
 	 });
+	 $(function () {
+ 		$('#store_notice').modal('show');
+	});
 	</script>
 	<script type="text/javascript">
      $(function(){
@@ -464,6 +467,22 @@
 		    		<a class="btn c_org" href="#food_items2" rel="modal:close">選好了</a>
 		  		</div>
 		  	</form>
+	    </div>
+	    <!-- 公告 -->
+	    <div id="store_notice" class="modal fade fadebox">
+	    	<article class="notice_content">
+			  <h3 class="top_title">來店買奶茶送5聯名巧禮</h3>
+			  <div class="photo_content">
+			  	<img alt="來店買奶茶送5聯名巧禮" src="http://50lan.com/web/bookpic/images/50%E5%B5%90_%E8%A8%AD%E8%A8%88-Web-NEWS-%E8%B2%B7%E5%A5%B6%E8%8C%B6%E9%80%81%E5%B7%A7%E7%A6%AE.gif" width="100%">
+				<p class="info">活動注意事項:<br>
+					1.僅限於台北市、新北市、基隆市之5間門市。<br>
+				  	2.不適用於外送。<br>
+				  	3.本公司保有活動修改之權利。
+				</p>
+			</article>
+			<div class="the_button">
+		    	<a class="btn c_org" href="#food_items2" rel="modal:close">確定</a>
+		  	</div>
 	    </div>
 	</main>
 
