--- a/iiot/app_web/admin - 191002/manager.html
+++ b/iiot/app_web/admin - 191002/manager.html
@@ -47,6 +47,13 @@
 			return false;
 		});
 	});
+
+	$(function(){
+		$("ul.granted_item li p" ).click(function() {
+			$(this).toggleClass( "the_selected" );
+			return false;
+		});
+	});
 	</script>
 </head>
 <body>
@@ -58,7 +65,7 @@
 		</section>
 		<section class="bottom_manager_tools clearfix">
 			<p class="btn"><a href="#add_manager_pw" rel="modal:open"><i class="fas fa-user-plus"></i> 產生綁定碼</a></p>
-			<p class="btn"><a href="#add_manager_pw" rel="modal:open"><i class="fas fa-user-edit"></i> 編輯權限</a></p>
+			<p class="btn"><a href="#add_manager_granted" rel="modal:open"><i class="fas fa-user-edit"></i> 編輯權限</a></p>
 			<p class="btn"><a class="delete_manager" href="#delete_manager" rel="modal:open"><i class="far fa-trash-alt"></i> 移除管理員</a></p>
 		</section>
 		<section class="manager_list">
@@ -215,6 +222,26 @@
 				</li>
 			</ul>
 		</section>
+
+		<!-- 編輯權管理員限 -->
+	    <div id="add_manager_granted" class="modal fade fadebox">
+	    	<div class="manager_granted">
+	    		<h3 class="top_title">編輯權管理員權限</h3>
+	    		<div class="infobox">
+	    			<ul class="granted_item">
+	    				<li><p class="the_selected">商店管理</p></li>
+						<li><p>商品管理</p></li>
+						<li><p>營業報表</p></li>
+						<li><p>VIP客戶管理</p></li>
+						<li><p>報表與分析管理</p></li>
+					</ul>
+	    		</div>
+	    	</div>
+	    	<div class="the_button">
+	    		<a class="btn" href="#" rel="modal:close">取消</a>
+	    		<a class="btn c_org" href="#" rel="modal:open">確認</a>
+	  		</div>
+	    </div>
 
 		<!-- 產生綁定密碼 -->
 	    <div id="add_manager_pw" class="modal fade fadebox">
