--- a/iiot/app_web/shop- takeapart/index.html
+++ b/iiot/app_web/shop- takeapart/index.html
@@ -475,11 +475,8 @@
 				<div class="photo_content">
 					<img alt="來店買奶茶送5聯名巧禮" src="http://50lan.com/web/bookpic/images/50%E5%B5%90_%E8%A8%AD%E8%A8%88-Web-NEWS-%E8%B2%B7%E5%A5%B6%E8%8C%B6%E9%80%81%E5%B7%A7%E7%A6%AE.gif" width="100%">
 				</div>
-				<p class="info">活動注意事項:<br>
-					1.僅限於台北市、新北市、基隆市之5間門市。<br>
-				  	2.不適用於外送。<br>
-				  	3.本公司保有活動修改之權利。
-				</p>
+				<pre class="info">活動注意事項:<br>1.僅限於台北市、新北市、基隆僅限於台北市、新北市、基隆僅限於台北市、新北市、基隆僅限於台北市、新北市、基隆僅限於台北市、新北市、基隆市之5間門市。<br>2.不適用於外送。<br>3.本公司保有活動修改之權利。
+				</pre>
 			</article>
 			<div class="the_button">
 		    	<a class="btn c_org" href="#food_items2" rel="modal:close">確定</a>
