增加庫存設定

--- a/iiot/app_web/admin - 191002/product.html
+++ b/iiot/app_web/admin - 191002/product.html
@@ -321,6 +321,32 @@
 	    				<textarea type="text" placeholder="請輸入商品說明" >產品AAA產品AAA產品AAA 針對商品描述的描述針對商品描述的描述...</textarea>
 	    				<p>商品金額</p>
 	    				<input type="text" name="" placeholder="請輸入商品金額" value="129">
+	    				<!-- 點了上面　a：啟用商品庫存 ，開啟下方：每日商品庫存狀態 -->
+	    				<p>
+	    					<a class="stock" href="#">
+	    						<i class="far fa-square"></i>啟用商品庫存
+	    					</a>
+	    				</p>
+
+	    				<!-- 每日商品庫存狀態 -->
+	    				<div class="stock_box">
+		    				<p class="add_a_link">
+		    					每日商品庫存狀態
+		    					<a class="stock" href="#">
+		    						<i class="fas fa-times"></i>取消庫存
+		    					</a>
+		    				</p>
+		    				<div class="both_title clearfix">
+		    					<div class="">
+		    						<p>庫存數量</p>
+			    					<input type="text" name="" placeholder="庫存數量" value="0">
+			    				</div>
+			    				<div class="">
+		    						<p>剩餘數量</p>
+		    						<input type="text" name="" placeholder="剩餘數量" value="">
+		    					</div>
+		    				</div>
+	    				</div>
 	    			</li>
 	    		</ul>
 	    	</div>
