--- a/iiot/app_web/shop- takeapart/shoppingcart_02.html
+++ b/iiot/app_web/shop- takeapart/shoppingcart_02.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
 	<!-- 強迫修改css -->
     <style type="text/css">
-    	.blocker{ background-color: rgba(0,0,0,0.5);}
+    	.blocker{ background-color: rgba(0,0,0,0.5); z-index: 3;} /*層級改3不然最上面衡的選單會蓋到上面*/
     	.modal{box-shadow: 0 0 10px #0009;}
     </style>
     <script type="text/javascript">
@@ -37,7 +37,6 @@
 		<section class="order_tools">
 			<div class="the_button">
 				<a class="btn gray" href="shoppingcart_01.html">上一步</a>
-				<a class="btn c_org" href="shoppingcart_03.html">下一步</a>
 			</div>
 		</section>
 		<section class="content_box">
@@ -45,32 +44,120 @@
 		        <ul class="contents_box clearfix">
 		            <li class="step-1"><p><span>Step1.</span> 取餐方式</p></li>
 		            <li class="step-2 btn_in"><p><span>Step2.</span> 訂購資訊</p></li>
-		            <li class="step-3"><p><span>Step3.</span> 訂購明細</p></li>
 		        </ul>
 		    </div>
+		    <!-- 訂購明細 -->
+		    <form class="shopping_cart">
+		    	<h3 class="top_title">訂購明細</h3>
+		    	<h4 class="store_name">愛物聯小吃店 - 分店1</h4>
+		    	<ul class="order_list_done">
+		    		<li>
+		    			<p class="clearfix">
+		    				<span class="l_t">商家電話</span>
+		    				<span class="r_info">0987654321</span>
+		    			</p>
+		    		</li>
+		    		<li>
+		    			<p class="clearfix">
+		    				<span class="l_t">商家地址</span>
+		    				<span class="r_info">台北市民生東路三段107巷6號2樓</span>
+		    			</p>
+		    		</li>
+		    		<li>
+		    			<p class="clearfix">
+		    				<span class="l_t">取餐方式</span>
+		    				<span class="r_info">外送</span>
+		    			</p>
+		    		</li>
+		    		<li>
+		    			<p class="clearfix">
+		    				<span class="l_t">外送地址</span>
+		    				<span class="r_info">台北市南京東路三段星巴克1F</span>
+		    			</p>
+		    		</li>
+		    		<li class="bottom_line">
+		    			<p class="clearfix">
+		    				<span class="l_t">取餐時間</span>
+		    				<span class="r_info">立刻取餐</span>
+		    			</p>
+		    		</li>
+		    		<li>
+		    			<p class="s_f">訂單項目</p>
+		    		</li>
+		    		<li class="buy_list">
+		    			<p class="clearfix">
+		    				<span class="l_t">蝦仁蛋炒飯</span>
+		    				<span class="r_nb">1$80 = $80</span>
+		    			</p>
+		    		</li>
+		    		<li class="width_f">
+		    			<p>總金額：$160</p>
+		    		</li>
+		        </ul>
+		    </form>
 			<!-- 請填寫訂購資訊 -->
 		    <form class="shopping_cart">
 		    	<h3 class="top_title">請填寫訂購資訊</h3>
 		    	<div class="order_consumer_info">
 					<ul class="fillin">
 						<li>
-							<label for="name">訂購人</label>
-							<input id="name" type="text" name="" value="Pin chen" placeholder="請輸入訂購人姓名">
+							<label for="name"><span class="org">*</span>訂購人</label>
+							<!-- 有錯誤訊息要+error_tips 讓 input 和 textarea 變底色 -->
+							<div class="f_box error_tips">
+								<input id="name" type="text" name="" value="Pin chen" placeholder="請輸入訂購人姓名">
+								<p class="error"><i class="fas fa-exclamation-circle"></i>格式錯誤</p>
+							</div>
+						</li>
+						<!-- 第一次尚未驗證手機號碼 -->
+						<li>
+							<label for="phone"><span class="org">*</span>手機號碼</label>
+							<div class="phone_verification clearfix">
+								<div class="f_box error_tips">
+									<input id="phone" type="text" name="" value="" placeholder="例： 0912345678">
+									<p class="error"><i class="fas fa-exclamation-circle"></i>格式錯誤</p>
+								</div>
+								<button class="btn_yello" type="button">驗證手機號碼</button>
+							</div>
+						</li>
+						<!-- 第一次尚未驗證手機號碼  style2-->
+						<li>
+							<label for="phone"><span class="org">*</span>手機號碼</label>
+							<div class="phone_verification2 clearfix">
+								<div class="f_box error_tips">
+									<input id="phone" type="text" name="" value="" placeholder="例： 0912345678">
+									<p class="error"><i class="fas fa-exclamation-circle"></i>格式錯誤</p>
+								</div>
+								<!-- <button class="btn_yello" type="button">驗證手機號碼</button> -->
+								<p class="btn_yello"><a href="#phone_code" rel="modal:open">手機驗證</a></p>
+							</div>
+						</li>
+						<!-- 驗證過可修改手機號碼 -->
+						<li>
+							<label for="phone"><span class="org">*</span>手機號碼</label>
+							<div class="phone_verification clearfix">
+								<div class="result clearfix">
+									<p>0912235456</p>
+									<!-- <button class="btn_yello" type="button">修改</button> -->
+									<p class="btn_yello"><a href="#phone_code2" rel="modal:open">修改</a></p>
+								</div>
+							</div>
 						</li>
 						<li>
-							<label for="phone">聯絡電話</label>
-							<input id="phone" type="text" name="" value="" placeholder="請輸入聯絡電話 例: 0912345678">
-						</li>
-						<li>
-							<label for="email">Email</label>
-							<input id="email" type="text" name="" value="" placeholder="請輸入Email">
+							<label for="email"><span class="org">*</span>Email</label>
+							<div class="f_box">
+								<input id="email" type="text" name="" value="" placeholder="請輸入Email">
+							</div>
 						</li>
 						<li>
 							<label for="note">備註</label>
-							<textarea id="note" type="text" name="" value=""></textarea>
+							<div class="f_box error_tips">
+								<textarea id="note" type="text" name="" value=""></textarea>
+								<p class="error"><i class="fas fa-exclamation-circle"></i>字數超過限制</p>
+								<p class="s_f_g">(最多 200 個字元)</p>
+							</div>
 						</li>
 						<li class="the_invoice">
-							<h4>開立統一編號/收據</h4>
+							<h4><span class="org">*</span>開立統一編號/收據</h4>
 							<div>
 								<input id="invoice1" type="radio" name="field" value="option" checked="">
 								<label for="invoice1">個人電子發票(二聯式)</label>
@@ -81,13 +168,44 @@
 							</div>
 						</li>
 						<li class="invoice_fillin">
-							<input id="code" type="text" name="" value="" placeholder="請輸入統一編號(8位數字)">
-							<input id="code" type="text" name="" value="" placeholder="請填入發票抬頭">
+							<div class="f_box error_tips">
+								<input id="code" type="text" name="" value="$" placeholder="請輸入統一編號(8位數字)" >
+								<p class="error"><i class="fas fa-exclamation-circle"></i>格式錯誤</p>
+							</div>
+							<div class="f_box">
+								<input id="code" type="text" name="" value="" placeholder="請填入發票抬頭">
+							</div>
 						</li>
 					</ul>
 				</div>
 		    </form>
+		    <form class="shopping_cart">
+				<h3 class="top_title">請選擇付款方式</h3>
+				<ul class="the_btn">
+					<li>
+						<p>現金付款</p>
+					</li>
+					<li>
+						<p>線上付款</p>
+					</li>
+				</ul>
+			</form>
 		</section>
+
+		<!-- 電話驗證 -->
+	    <div id="phone_code" class="modal fade fadebox">
+	    	<div class="verification">
+	    		<h3 class="top_title">手機驗證</h3>
+	    		<div class="both clearfix">
+	    			<button  class="btn" type="button">沒收到驗證碼?</button>
+	    			<input type="text" name="" placeholder="請輸入驗證碼">
+	    		</div>
+	    	</div>
+	    	<div class="the_button">
+	    		<a class="btn c_gray" href="#" rel="modal:close">取消</a>
+	    		<a class="btn c_org" class="done" href="#">送出</a>
+	  		</div>
+	    </div>
 	</main>
 </body>
 </html>
