更新右邊欄位跑掉問題

--- a/iiot/app_web/admin - 191002/order_management_01.html
+++ b/iiot/app_web/admin - 191002/order_management_01.html
@@ -60,7 +60,7 @@
 		    	<li class="bottom_line">
 		    		<p class="clearfix">
 		    			<span class="l_t">備註</span>
-		    			<span class="r_info">無</span>
+		    			<span class="r_info">無2o3ko2ik3oi2ko3k23io4ki3ok4io3k5i34uduhiriuwhrfo</span>
 		    		</p>
 		    	</li>
 		    	<li class="bottom_line">
