新增 - 無庫存css

--- a/iiot/app_web/shop- takeapart/index.html
+++ b/iiot/app_web/shop- takeapart/index.html
@@ -112,7 +112,8 @@
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述</h4>
 								<p class="money">$129</p>
 								<div class="btn_buy clearfix">
-			                        <button class="btn_order">選購商品</button>
+			                        <!-- <button class="btn_order" href="#food_items"  rel="modal:open">選購商品</button> -->
+			                        <p class="btn_order"><a class="btn c_org" href="#food_items"  rel="modal:open">選購商品</a></p>
 			                        <p class="product_inventory">剩餘數量：2</p>
 			                    </div>
 							</div>
@@ -316,7 +317,7 @@
 				<div class="option_list_box">
 		    		<ul class="option_list clearfix">
 						<li>
-							<div class="the_radio">
+							<div class="the_radio out_of_stock">
 								<input type="radio" name="bb" id="b1" value="草莓">
 								<label for="b1">草莓</label>
 							</div>
@@ -346,7 +347,7 @@
 					<ul class="option_list clearfix">
 						<li>
 							<div>
-								<div class="the_checkbox">
+								<div class="the_checkbox out_of_stock">
 									<input type="checkbox" name="cc" id="a" value="">
 									<label for="a">薯條 $15</label>
 								</div>
@@ -362,7 +363,7 @@
 						</li>
 						<li>
 							<div>
-								<div class="the_checkbox">
+								<div class="the_checkbox out_of_stock">
 									<input type="checkbox" name="cc" id="c" value="">
 									<label for="c">咖啡 $15</label>
 								</div>
